feat: Integrate Gemini AI help assistant
Adds Gemini AI integration for user assistance. Includes API key checking and improved error handling for the Gemini service. Also updates the HTML to load the TypeScript entry point.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <!-- টাইপস্ক্রিপ্ট এন্ট্রি পয়েন্ট লোড করা হচ্ছে -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
